# Stiff-GIPC

./: .gitignore  CMakeLists.txt  README.md
Assets/scene/: abd_system_config.json  parameterSetting.txt
Assets/scene/json/: wrecking-ball-simple.json
Assets/sorted_mesh/: bunny10_sorted.16.part  bunny2_sorted.16.msh  bunny2_sorted.16.part  cloth_high_sorted.16.part
Assets/tetMesh/wrecking-ball-mesh/: cube.obj_.msh
GPU_IPC/: FrictionUtils.cuh  GIPC.cu  GIPC.cuh  MASPreconditioner.cuh  PCG_SOLVER.cu  PCG_SOLVER.cuh  QRSVD.hpp  device_fem_data.cu  device_fem_data.cuh  eigen_data.h  femEnergy.cu  gl_main.cu  gpu_eigen_libs.cuh  load_mesh.h  mlbvh.cu
GPU_IPC/abd_system/: abd_sim_data.h  abd_system.cu
GPU_IPC/abd_system/abd_system_function/: cal_abd_energy.cu  cal_q_tilde.cu  cal_x_from_q.cu  (+2 more)
GPU_IPC/contact_system/: contact_info_reporter.cu  contact_system.cu
GPU_IPC/gipc/: gipc.h  statistics.cpp
GPU_IPC/muda/: CMakeLists.txt
MeshProcess/: CMakeLists.txt
MeshProcess/metis_partition/: metis_sort.cpp
StiffGIPC/: ACCD.cu  ACCD.cuh  GIPC.cu  GIPC_PDerivative.cuh  MASPreconditioner.cu  PCG_SOLVER.cu  body_boundary_type.h  cuda_tools.h  femEnergy.cuh  gipc_path.h  givens.hpp  gl_main.cu  gpu_eigen_libs.cu  load_mesh.cpp  mlbvh.cuh
StiffGIPC/abd_system/: abd_energy.h  abd_jacobi_matrix.h  abd_sim_data.cu  abd_system.h  abd_system_parms.h
StiffGIPC/contact_system/: contact_info.h  contact_info_reporter.h  contact_system.h  i_contact_reporter.h
StiffGIPC/gipc/: abd_fem_count_info.h  body_type.h  gipc.cu  statistics.h  tet_local_info.h  type_define.h
(+55 files in other folders)
